<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motoman_msgs</name>
  <version>0.0.0</version>
  <description>Messages for the multi-group interface of motoman_driver.</description>
  <maintainer email="sachin.kumar@b-robotized.com">Sachin Kumar</maintainer>
  <license>BSD-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>
  <depend>industrial_msgs</depend>
  <depend>trajectory_msgs</depend>


  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
