<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yaskawa_ros2_control_support</name>
  <version>0.0.0</version>
  <description>A package for ros2_control hardware simulation</description>
  <maintainer email="denis@stoglrobotics.de">sahand_w</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ros2launch</test_depend>

  <depend>controller_manager</depend>
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>

  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

<!--   <exec_depend>kuka_eki_hw_interface</exec_depend> -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
